// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/EmptyState With Link 1`] = `
<div
  className="sc-gsTCUz dUzLYl"
>
  <div
    className="sc-eggNIi fRKxUt sc-emptystate"
  >
    <div
      className="sc-jNMdTA idLPUw"
    >
      <div
        className="sc-bBrOnJ kslhCT"
      >
        <i
          className="fas fa-server"
        />
      </div>
    </div>
    <div
      className="sc-jNMdTA idLPUw"
    >
      <h3
        className="sc-cTkwdZ jgiGzD"
      >
        A list of 
        nodes
         will appear here
      </h3>
    </div>
    <div
      className="sc-jNMdTA idLPUw"
    >
      <h3
        className="sc-cTkwdZ jgiGzD"
      >
        There are no 
        nodes
         created yet, let's create your first
         
        node
        .
      </h3>
    </div>
    <div
      className="sc-dOSReg YzaVf"
    >
      <button
        className="sc-bqyKva jdKiEV sc-button"
        disabled={false}
        onClick={[Function]}
        size="large"
        title=""
        type="button"
      >
        <span
          className="sc-fodVxV ckNcPt"
        >
          <span
            className="sc-button-text"
          >
            <span
              className="sc-kstrdz gLcDls"
              size="large"
            >
              <i
                className="fas fa-plus"
              />
            </span>
            <span
              className="sc-hBEYos jaVYGW"
            >
              Create node
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/EmptyState Without Link 1`] = `
<div
  className="sc-gsTCUz dUzLYl"
>
  <div
    className="sc-eggNIi fRKxUt sc-emptystate"
  >
    <div
      className="sc-jNMdTA idLPUw"
    >
      <div
        className="sc-bBrOnJ kslhCT"
      >
        <i
          className="fas fa-server"
        />
      </div>
    </div>
    <div
      className="sc-jNMdTA idLPUw"
    >
      <h3
        className="sc-cTkwdZ jgiGzD"
      >
        A list of 
        nodes
         will appear here
      </h3>
    </div>
    <div
      className="sc-jNMdTA idLPUw"
    >
      <h3
        className="sc-cTkwdZ jgiGzD"
      >
        There are no 
        nodes
         created yet, let's create your first
         
        node
        .
      </h3>
    </div>
  </div>
</div>
`;
